--- a/apps/catalog/app.json
+++ b/apps/catalog/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "mona-ca_catalog",
-    "slug": "mona-ca_catalog",
+    "name": "mc-catalog",
+    "slug": "mc-catalog",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "mc-catalog",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.mona-ca.catalog"
     },
     "android": {
       "adaptiveIcon": {
@@ -28,7 +29,8 @@
     },
     "plugins": ["expo-router"],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "tsconfigPaths": true
     }
   }
 }
