--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -5,19 +5,24 @@
   "private": true,
   "scripts": {
     "gen:mobile": "sb-rn-get-stories -c ./.storybook/mobile",
-    "dev:web": "storybook dev -p 6006 --no-open -c ./.storybook/web",
-    "dev:mobile": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start",
+    "sb:web": "storybook dev -p 6006 --no-open -c ./.storybook/web",
+    "sb:mobile": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --port=8082",
+    "sb:ios": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --ios --port=8082",
     "build": "storybook build -o ./.storybook/static",
+    "build:ios": "expo run:ios",
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched"
+    "lint:fix": "biome lint --write --no-errors-on-unmatched",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -25,52 +30,55 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "^4.0.36",
+    "nativewind": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.16.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@chromatic-com/storybook": "^1.6.1",
     "@mona-ca/postcss": "workspace:*",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native/babel-preset": "^0.74.86",
-    "@storybook/addon-a11y": "^8.2.7",
+    "@react-native/babel-preset": "^0.74.87",
+    "@storybook/addon-a11y": "^8.2.9",
     "@storybook/addon-actions": "8.1.11",
-    "@storybook/addon-essentials": "^8.2.7",
-    "@storybook/addon-interactions": "^8.2.7",
-    "@storybook/addon-links": "^8.2.7",
-    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
     "@storybook/addon-ondevice-actions": "^7.6.20",
     "@storybook/addon-ondevice-controls": "^7.6.20",
     "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/addon-storysource": "^8.2.7",
+    "@storybook/addon-storysource": "^8.2.9",
     "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/addon-themes": "^8.2.7",
+    "@storybook/addon-themes": "^8.2.9",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.2.7",
+    "@storybook/blocks": "^8.2.9",
     "@storybook/preview-api": "8.1.11",
-    "@storybook/react": "^8.2.7",
+    "@storybook/react": "^8.2.9",
     "@storybook/react-native": "^7.6.20",
-    "@storybook/react-webpack5": "^8.2.7",
-    "@storybook/test": "^8.2.7",
+    "@storybook/react-webpack5": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@storybook/test-runner": "^0.17.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "babel-loader": "^9.1.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-native-web": "^0.19.12",
     "css-loader": "^7.1.2",
     "postcss": "^8.4.41",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
-    "storybook": "^8.2.7",
+    "react-native-svg-transformer": "^1.5.0",
+    "storybook": "^8.2.9",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.10"
