--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -49,23 +49,24 @@
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@babel/plugin-transform-class-static-block": "^7.26.0",
-    "@chromatic-com/storybook": "^2.0.2",
+    "@chromatic-com/storybook": "^4.1.3",
     "@mona-ca/postcss": "workspace:*",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native/babel-preset": "^0.74.89",
-    "@storybook/addon-a11y": "9.1.17",
-    "@storybook/addon-onboarding": "9.1.17",
-    "@storybook/addon-ondevice-actions": "^9.0.0",
-    "@storybook/addon-ondevice-controls": "^9.0.0",
+    "@storybook/addon-a11y": "10.1.11",
+    "@storybook/addon-docs": "10.1.11",
+    "@storybook/addon-onboarding": "10.1.11",
+    "@storybook/addon-ondevice-actions": "^10.1.1",
+    "@storybook/addon-ondevice-controls": "^10.1.1",
     "@storybook/addon-react-native-web": "^0.0.24",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-themes": "9.1.17",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.6",
-    "@storybook/react-native": "^9.0.0",
-    "@storybook/react-webpack5": "9.1.17",
-    "@storybook/test-runner": "^0.17.0",
+    "@storybook/addon-themes": "10.1.11",
+    "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
+    "@storybook/react-native": "^10.1.1",
+    "@storybook/react-webpack5": "10.1.11",
+    "@storybook/test-runner": "^0.24.2",
     "@types/react": "~19.1.10",
     "babel-loader": "^9.2.1",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -75,9 +76,8 @@
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react-native-svg-transformer": "^1.5.1",
-    "storybook": "9.1.17",
+    "storybook": "10.1.11",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.17",
-    "@storybook/addon-docs": "9.1.17"
+    "tailwindcss": "^3.4.17"
   }
 }
